<resources>
    <string name="app_name">EasyMed</string>
    <string name="action_settings">Definições</string>
    <string name="name_medicine">Nome Medicamento</string>
    <string name="icon_medicine">Ícone Medicamento</string>
    <string name="hour_to_take">Hora Toma</string>
    <string name="med_dose">Dose Medicamento</string>
    <string name="add_medicine">Adicionar</string>
    <string name="medicine_in_plan">Medicamentos no Plano</string>
    <string name="previously_medicine_in_plan">Medicamentos Anteriormente no Plano</string>
    <string name="to_take_taken_medicine">Faltam/Tomados</string>
    <string name="medicine_placeholder">Exemplo: Ibuprofeno</string>
    <string name="medicine_dose_placeholder">Exemplo: 100mg</string>
    <string name="medicine_name_1">Ibuprofeno</string>
    <string name="medicine_name_2">Clavamox</string>
    <string name="medicine_name_3">Kestine</string>
    <string name="change_icon">Alterar Ícone</string>
    <string name="current_time">00:00</string>
    <string name="med_title">Medicamentos</string>
    <string name="add_meds_button">Adicionar Medicamentos</string>
    <string name="settingsText">Definições</string>
    <string name="logo_description">App Logo</string>
    <string name="menu_button_descrition">Menu Button</string>
    <string name="top_view_title_text">Parte da Manhã</string>
    <string name="about">Acerca</string>
    <string name="home">Home</string>
    <string name="ativate_dark_mode">Ativar modo escuro</string>
    <string name="notifications">Notificações</string>
    <string name="login">Entrar</string>
    <string name="login_more_info">Entrar com uma conta existente</string>
    <string name="register">Criar conta</string>
    <string name="register_more_info">Criar uma conta</string>
    <string name="select_med_icon">Selecione o ícone do medicamento</string>
    <string name="rate_app">Avalie a APP</string>
    <string name="faq">FAQ</string>
    <string name="faq_more_info">Local com perguntas recorrentes</string>
    <string name="change_language">Mudar idioma</string>
    <string name="change_language_more_info">Mudar o idioma da APP</string>
    <string name="portuguese_english">Portuguese/English</string>
    <string name="white_black">Branco/Preto</string>
    <string name="zero_time">00:00:00</string>
    <string name="med_start_date">Data inicio</string>
    <string name="med_finish_date">Data fim</string>
    <string name="select_the_start_date">Selecione a data de inicio</string>
    <string name="select_the_finish_date">Selecione a data de fim</string>
    <string name="select_the_take_hour">Selecione a hora da toma</string>
    <string name="select_take_hour">Hora toma</string>
    <string name="top_view_title_text_evening">Parte da Tarde</string>
    <string name="plan_for_day">Medicamentos do Dia</string>
    <string name="about_text">Este projecto foi desenvolvido no ambito da UC Interação Pesssoa Computador do Curso de Engenharia Informática da ESTIG, orientada pelo docente Luís Garcia.</string>
    <string name="about_authors">Autores:</string>
    <string name="about_authors_names_1">Henrique Gil(20435)</string>
    <string name="about_authors_names_2">Gabriel Gomes(19932)</string>
    <string name="app_version">Versão: 0.0.2</string>
    <string name="side_effects">Efeitos Secundários</string>
    <string name="side_effects_med1">Sendo um anti-inflamatório não esteroide (AINE), o ibuprofeno partilha de todos os efeitos colaterais da classe.  Os principais efeitos colaterais do ibuprofeno, em ordem decrescente de frequência, são: dispepsia (queimação no estômago), náuseas, azia, tonturas, visão turva, zumbidos no ouvidos, retenção de líquidos e edemas, prisão de ventre, excesso de gases, coceiras e diminuição do volume urinário.  Duas complicações graves do ibuprofeno são a úlcera péptica e a insuficiência renal, que podem surgir com o uso prolongado de qualquer AINE. Pacientes que fazem uso crônico de ibuprofeno também apresentam maior risco de complicações cardiovasculares.</string>
    <string name="side_effects_med2">A amoxicilina + ácido clavulânico é um antibiótico com espectro de ação mais amplo que a amoxicilina, mas também com uma taxa de efeitos adversos maior.  A diarreia é o principal efeito colateral e pode ocorrer em até 1/3 dos pacientes que estão usando doses mais altas ou por tempo prolongado.  Outros efeitos adversos comuns, que ocorrem em 1 a 10% dos casos são:  Erupções cutâneas. Urticária. Desconforto abdominal. Náuseas. Vaginite. Candidíase vaginal.</string>
    <string name="side_effects_med3">Como os demais medicamentos, Kestine comprimidos revestidos pode ter efeitos secundários, geralmente ligeiros e transitórios. Relativamente à frequência, as reacções adversas notificadas, foram todas classificadas na categoria de muito raras (1/10.000):  Cardiopatias: palpitações, taquicardia (aceleração do ritmo cardíaco). Doenças gastrointestinais: secura de boca, dispepsia (perturbação da digestão), dor abdominal, náusea, vómito.  Perturbações gerais e alterações no local de administração: astenia (diminuição das forças), edema (inchaço). Afecções hepatobiliares: alteração nos valores dos testes de função hepática. Doenças do sistema nervoso: sonolência, dor de cabeça, tontura, disastesia (sensação anormal). Perturbações do foro psiquiátrico: insónia, nervosismo.</string>
</resources>