<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Adicionar_Medicamentos">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="false"
        android:background="@null"
        android:cropToPadding="false"
        android:scaleX="2.5"
        android:scaleY="2.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/back_button" />

    <ImageButton
        android:id="@+id/menu_button"
        android:layout_width="61dp"
        android:layout_height="57dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@null"
        android:backgroundTint="@null"
        android:hapticFeedbackEnabled="false"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medicine_name_3"
        android:textSize="22dp"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="521dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medicine_name_2"
        android:textSize="22dp"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="238dp" />

    <ProgressBar
        android:id="@+id/progressBar5"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="74dp"
        android:layout_height="29dp"
        tools:layout_editor_absoluteX="303dp"
        tools:layout_editor_absoluteY="265dp" />

    <ProgressBar
        android:id="@+id/progressBar6"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="74dp"
        android:layout_height="29dp"
        tools:layout_editor_absoluteX="310dp"
        tools:layout_editor_absoluteY="521dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="343dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="354dp"
        android:layout_height="65dp"
        android:text="@string/previously_medicine_in_plan"
        android:textAllCaps="false"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="370dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="82dp"
        android:layout_height="73dp"
        app:srcCompat="@mipmap/pill"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="158dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medicine_name_1"
        android:textSize="22dp"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="179dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medicine_in_plan"
        android:textSize="25dp"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="111dp" />

    <ProgressBar
        android:id="@+id/progressBar4"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="74dp"
        android:layout_height="29dp"
        tools:layout_editor_absoluteX="303dp"
        tools:layout_editor_absoluteY="202dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/to_take_taken_medicine"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="179dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/to_take_taken_medicine"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="502dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/to_take_taken_medicine"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="246dp" />

</androidx.constraintlayout.widget.ConstraintLayout>